Restructured lesson 2 exercises.

--- a/html-css-course/lesson_2/2-buttons.html
+++ b/html-css-course/lesson_2/2-buttons.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buttons</title>
     <style>
+        button {
+            cursor: pointer;
+        }
+
         .subscribe-button {
             background-color: rgb(200, 0, 0);
             color: white;
             border: none;
             height: 36px;
-            width: 100px;
+            width: 105px;
             border-radius: 2px;
-            cursor: pointer;
             margin-right: 8px;
         }
 
@@ -25,7 +28,6 @@
             height: 36px;
             width: 62px;
             border-radius: 2px;
-            cursor: pointer;
         }
 
         .tweet-button {
@@ -37,7 +39,6 @@
             border-radius: 18px;
             font-weight: bold;
             font-size: 15px;
-            cursor: pointer;
             margin-left: 8px;
         }
     </style>
