--- a/html-css-course/lesson_3/lesson-3-hover-transition-shadow.html
+++ b/html-css-course/lesson_3/lesson-3-hover-transition-shadow.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buttons</title>
+    <title>Hover Transisions</title>
     <style>
         .subscribe-button {
             background-color: rgb(200, 0, 0);
@@ -14,6 +14,16 @@
             border-radius: 2px;
             cursor: pointer;
             margin-right: 8px;
+            transition: opacity .15s;
+            vertical-align: top;
+        }
+
+        .subscribe-button:hover {
+            opacity: .5;
+        }
+
+        .subscribe-button:active {
+            opacity: 0.4;
         }
 
         .join-button {
@@ -26,6 +36,16 @@
             width: 62px;
             border-radius: 2px;
             cursor: pointer;
+            transition: background-color .15s, color .15s;
+        }
+
+        .join-button:hover {
+            background-color: rgb(41, 118, 211);
+            color: white;
+        }
+
+        .join-button:active {
+            opacity: 0.7;
         }
 
         .tweet-button {
@@ -39,20 +59,26 @@
             font-size: 15px;
             cursor: pointer;
             margin-left: 8px;
+            transition: box-shadow 0.15s;
+            vertical-align: top;
+        }
+
+        .tweet-button:hover {
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, .15);
         }
     </style>
 </head>
 <body>
-    <button class="subscribe-button">
-        SUBSCRIBE
-    </button>
+<button class="subscribe-button">
+    SUBSCRIBE
+</button>
 
-    <button class="join-button">
-        JOIN
-    </button>
+<button class="join-button">
+    JOIN
+</button>
 
-    <button class="tweet-button">
-        Tweet
-    </button>
+<button class="tweet-button">
+    Tweet
+</button>
 </body>
 </html>
