--- a/html-css-course/lesson_3/3e.html
+++ b/html-css-course/lesson_3/3e.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3</title>
+    <title>3e</title>
     <style>
         .linkedin-button-apply {
             background-color: rgb(10, 102, 194);
