Completed lesson 10 exercises.

--- a/html-css-course/lessons/lesson_9/9g.html
+++ b/html-css-course/lessons/lesson_9/9g.html
@@ -69,5 +69,37 @@
             Add Friend
         </button>
     </div>
+
+    <div class="card">
+        <img class="card-image" src="images/hourglass.png" alt="hourglass">
+
+        <p class="name">
+            John
+        </p>
+
+        <p class="friends">
+            3 mutual friends
+        </p>
+
+        <button class="friend-button">
+            Add Friend
+        </button>
+    </div>
+
+    <div class="card">
+        <img class="card-image" src="images/hourglass.png" alt="hourglass">
+
+        <p class="name">
+            Mike
+        </p>
+
+        <p class="friends">
+            5 mutual friends
+        </p>
+
+        <button class="friend-button">
+            Add Friend
+        </button>
+    </div>
 </body>
 </html>
