--- a/html-css-course/lessons/lesson_11/grid.html
+++ b/html-css-course/lessons/lesson_11/grid.html
@@ -31,7 +31,7 @@
         grid-template-columns: 100px 1fr;
         ">
         <div style="background-color: lightblue;">100px</div>
-        <div style="background-color: lightpink;">100px</div>
+        <div style="background-color: lightpink;">1 fr</div>
     </div>
 
     <div style="
