--- a/html-css-course/final-project/youtube.html
+++ b/html-css-course/final-project/youtube.html
@@ -31,7 +31,10 @@
         <div class="right-section">
             <img class="upload-icon" src="icons/upload.svg" alt="">
             <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
-            <img class="notifications-icon" src="icons/notifications.svg" alt="">
+            <div class="notifications-icon-container">
+                <img class="notifications-icon" src="icons/notifications.svg" alt="">
+                <div class="notifications-count">3</div>
+            </div>
             <img class="current-user-picture" src="channel-pictures/my-channel.jpeg" alt="">
         </div>
     </div>
@@ -44,6 +47,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+                <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -68,6 +72,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+                <div class="video-time">8:22</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -92,6 +97,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+                <div class="video-time">9:13</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -116,6 +122,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+                <div class="video-time">22:09</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -140,6 +147,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+                <div class="video-time">11:17</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
@@ -164,6 +172,7 @@
         <div class="video-preview">
             <div class="thumbnail-row">
                 <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+                <div class="video-time">19:59</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
