--- a/html-css-course/lessons/lesson_14/position.html
+++ b/html-css-course/lessons/lesson_14/position.html
@@ -18,6 +18,7 @@
         left: 0px;
         right: 0px;
         height: 50px;
+        z-index: 100;
     ">header</div>
 
     <div style="
@@ -30,6 +31,25 @@
     width: 72px;
     ">
         sidebar
+        <div style="
+            position: absolute;
+            background-color: red;
+            color: white;
+            right: 0px;
+            top: 0px;
+        ">
+            X
+        </div>
+    </div>
+
+    <div style="
+        position: absolute;
+        background-color: red;
+        color: white;
+        right: 10px;
+        top: 60px;
+    ">
+        absolute
     </div>
     
     <div style="
@@ -42,7 +62,17 @@
         background-color: lightpink;
         height: 200px;
         width: 200px;
-        position: static;
-    ">div 2</div>
+        position: relative;
+    ">
+        <div style="
+            position: absolute;
+            background-color: black;
+            color: white;
+            right: 10px;
+            bottom: 10px;
+        ">
+            5:00
+        </div>
+        div 2</div>
 </body>
 </html>
