--- a/html-css-course/final-project/youtube.html
+++ b/html-css-course/final-project/youtube.html
@@ -23,39 +23,86 @@
             <input class="search-bar" placeholder="Search" type="text">
             <button class="search-button">
                 <img class="search-icon" src="icons/search.svg" alt="">
+                <div class="tooltip">Search</div>
             </button>
             <button class="voice-search-button">
                 <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="">
+                <div class="tooltip">Search with your voice</div>
             </button>
         </div>
         <div class="right-section">
-            <img class="upload-icon" src="icons/upload.svg" alt="">
-            <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
+            <div class="upload-icon-container">
+                <img class="upload-icon" src="icons/upload.svg" alt="">
+                <div class="tooltip">Create</div>
+            </div>
+            <div class="youtube-apps-icon-container">
+                <img class="youtube-apps-icon" src="icons/youtube-apps.svg" alt="">
+                <div class="tooltip">YouTube apps</div>
+            </div>
             <div class="notifications-icon-container">
                 <img class="notifications-icon" src="icons/notifications.svg" alt="">
                 <div class="notifications-count">3</div>
+                <div class="tooltip">Notifications</div>
             </div>
             <img class="current-user-picture" src="channel-pictures/my-channel.jpeg" alt="">
         </div>
     </div>
 
     <div class="sidebar">
-        sidebar
+        <div class="sidebar-link">
+            <img src="icons/home.svg" alt="">
+            <div>Home</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/explore.svg" alt="">
+            <div>Explore</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/subscriptions.svg" alt="">
+            <div>Subscriptions</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/originals.svg" alt="">
+            <div>Originals</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/youtube-music.svg" alt="">
+            <div>YouTube Music</div>
+        </div>
+        <div class="sidebar-link">
+            <img src="icons/library.svg" alt="">
+            <div>Library</div>
+        </div>
     </div>
 
     <div class="video-grid">
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+                <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank">
+                    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+                </a>
                 <div class="video-time">14:20</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+                    <a class="video-link" href="https://www.youtube.com/c/mkbhd" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+                        <div class="channel-tooltip">
+                            <img src="channel-pictures/channel-1.jpeg" alt="">
+                            <div class="channel-name">
+                                Marques Brownlee
+                            </div>
+                            <div class="">
+
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
-                        Talking Tech and AI with Google CEO Sundar Pichai!
+                        <a class="video-link" href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="_blank">
+                            Talking Tech and AI with Google CEO Sundar Pichai!
+                        </a>
                     </p>
 
                     <p class="video-author">
@@ -71,16 +118,22 @@
 
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+                <a href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank">
+                    <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+                </a>
                 <div class="video-time">8:22</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+                    <a href="https://www.youtube.com/c/markiplier" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+                    </a>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
-                        Try Not To Laugh Challenge #9
+                        <a class="video-link" href="https://www.youtube.com/watch?v=mP0RAo9SKZk" target="_blank">
+                            Try Not To Laugh Challenge #9
+                        </a>
                     </p>
 
                     <p class="video-author">
@@ -96,16 +149,22 @@
 
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+                <a href="https://www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank">
+                    <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+                </a>
                 <div class="video-time">9:13</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="channel-pictures/channel-3.jpeg">
+                    <a href="https://www.youtube.com/user/SSSniperWolf" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-3.jpeg">
+                    </a>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
-                        Crazy Tik Toks Taken Moments Before DISASTER
+                        <a class="video-link" href="https://www.youtube.com/watch?v=FgjPQQeTh1w" target="_blank">
+                            Crazy Tik Toks Taken Moments Before DISASTER
+                        </a>
                     </p>
 
                     <p class="video-author">
@@ -121,16 +180,22 @@
 
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+                <a href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank">
+                    <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+                </a>
                 <div class="video-time">22:09</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+                    <a href="https://www.youtube.com/c/veritasium" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+                    </a>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
-                        The Simplest Math Problem No One Can Solve - Collatz...
+                        <a class="video-link" href="https://www.youtube.com/watch?v=094y1Z2wpJg" target="_blank">
+                            The Simplest Math Problem No One Can Solve - Collatz...
+                        </a>
                     </p>
 
                     <p class="video-author">
@@ -146,16 +211,22 @@
 
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+                <a href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank">
+                    <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+                </a>
                 <div class="video-time">11:17</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
+                    <a href="https://www.youtube.com/c/CSDojo" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
+                    </a>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
-                        Kadane's Algorithm to Maximum Sum Subarray Problem
+                        <a class="video-link" href="https://www.youtube.com/watch?v=86CQq3pKSUw" target="_blank">
+                            Kadane's Algorithm to Maximum Sum Subarray Problem
+                        </a>
                     </p>
 
                     <p class="video-author">
@@ -171,16 +242,22 @@
 
         <div class="video-preview">
             <div class="thumbnail-row">
-                <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+                <a href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank">
+                    <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+                </a>
                 <div class="video-time">19:59</div>
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
+                    <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA" target="_blank">
+                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
+                    </a>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
-                        Anything You Can Fit In The Circle I&#39;ll Pay For
+                        <a class="video-link" href="https://www.youtube.com/watch?v=yXWw0_UfSFg" target="_blank">
+                            Anything You Can Fit In The Circle I&#39;ll Pay For
+                        </a>
                     </p>
 
                     <p class="video-author">
