Finished final project YouTube page!

--- a/html-css-course/final-project/youtube.html
+++ b/html-css-course/final-project/youtube.html
@@ -85,18 +85,22 @@
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <a class="video-link" href="https://www.youtube.com/c/mkbhd" target="_blank">
-                        <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+                    <div class="profile-picture-container">
+                        <a class="video-link" href="https://www.youtube.com/c/mkbhd" target="_blank">
+                            <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+                        </a>
                         <div class="channel-tooltip">
-                            <img src="channel-pictures/channel-1.jpeg" alt="">
-                            <div class="channel-name">
-                                Marques Brownlee
-                            </div>
-                            <div class="">
-
+                            <img class="channel-picture-tooltip" src="channel-pictures/channel-1.jpeg" alt="">
+                            <div class="channel-tooltip-text">
+                                <div class="channel-name">
+                                    Marques Brownlee
+                                </div>
+                                <div class="subscribers">
+                                    15M subscribers
+                                </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
@@ -125,9 +129,22 @@
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <a href="https://www.youtube.com/c/markiplier" target="_blank">
-                        <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
-                    </a>
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/markiplier" target="_blank">
+                            <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img class="channel-picture-tooltip" src="channel-pictures/channel-2.jpeg" alt="">
+                            <div class="channel-tooltip-text">
+                                <div class="channel-name">
+                                    Markiplier
+                                </div>
+                                <div class="subscribers">
+                                    36.6M subscribers
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
@@ -156,9 +173,22 @@
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <a href="https://www.youtube.com/user/SSSniperWolf" target="_blank">
-                        <img class="profile-picture" src="channel-pictures/channel-3.jpeg">
-                    </a>
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/user/SSSniperWolf" target="_blank">
+                            <img class="profile-picture" src="channel-pictures/channel-3.jpeg">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img class="channel-picture-tooltip" src="channel-pictures/channel-3.jpeg" alt="">
+                            <div class="channel-tooltip-text">
+                                <div class="channel-name">
+                                    SSSniperWolf
+                                </div>
+                                <div class="subscribers">
+                                    34.4M subscribers
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
@@ -187,9 +217,22 @@
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <a href="https://www.youtube.com/c/veritasium" target="_blank">
-                        <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
-                    </a>
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/veritasium" target="_blank">
+                            <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img class="channel-picture-tooltip" src="channel-pictures/channel-4.jpeg" alt="">
+                            <div class="channel-tooltip-text">
+                                <div class="channel-name">
+                                    Veritasium
+                                </div>
+                                <div class="subscribers">
+                                    15.5M subscribers
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
@@ -218,9 +261,22 @@
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <a href="https://www.youtube.com/c/CSDojo" target="_blank">
-                        <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
-                    </a>
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/c/CSDojo" target="_blank">
+                            <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img class="channel-picture-tooltip" src="channel-pictures/channel-5.jpeg" alt="">
+                            <div class="channel-tooltip-text">
+                                <div class="channel-name">
+                                    CS Dojo
+                                </div>
+                                <div class="subscribers">
+                                    1.93M subscribers
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
@@ -249,9 +305,22 @@
             </div>
             <div class="video-info-grid">
                 <div class="channel-picture">
-                    <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA" target="_blank">
-                        <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
-                    </a>
+                    <div class="profile-picture-container">
+                        <a href="https://www.youtube.com/channel/UCX6OQ3DkcsbYNE6H8uQQuVA" target="_blank">
+                            <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
+                        </a>
+                        <div class="channel-tooltip">
+                            <img class="channel-picture-tooltip" src="channel-pictures/channel-6.jpeg" alt="">
+                            <div class="channel-tooltip-text">
+                                <div class="channel-name">
+                                    MrBeast
+                                </div>
+                                <div class="subscribers">
+                                    255M subscribers
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="video-info">
                     <p class="video-title">
